--- a/uvod.html
+++ b/uvod.html
@@ -177,90 +177,142 @@ var m = new SMap(JAK.gel("m"), center, 17, SMap.DEF_OPHOTO);
 <span style="color:#b9cb99;">
 <p>
 
+Čunovské jazerá a odpadky.
+<br><br>
+Prvý krát prídete na jazerá, je to ako by ste objavili raj v meste, poviete si aké krásne
+prírodné jazerá. Niekomu prejde mysľou - "aký nevyužitý potenciál Bratislavy". Jazerá budia
+dojem nikým nedotknutej, neprebádanej krajiny, bez civilizácie, oázy pokoja, o ktorú sa nik
+nestará a tak je ponechaná napospas prírody. Iba stará asfaltová cesta tiahnúca sa medzi
+jazerami, kazí tento dojem nikým nedotknutej krajiny.
+<br><br>	
+A vy ani len netušíte, že tieto perly na okraji Bratislavy nie sú vôbec nedotknuté a majú za
+sebou búrlivú históriu.
+<br><br>
+Prečo je znečisťovanie čunovských jazier tak citlivá téma pre Bratislavu?
+<br><br>	
+Aby sme to pochopili musíme načrieť do nedávnej histórie.
+<br>
+Ešte v 70. tych rokoch boli jazerá a ich okolie - Ostrovné lúčky pre väčšinu ľudí neznáme.
+Bolo známe len toľko, že územie patriace pod obce Čunovo a Rusovce, ktoré boli po 2.
+svetovej vojne pričlenená k Československu a v 70.tych rokoch k Bratislave. Územie, ktoré bolo
+odjakživa ovplyvnené meniacim sa Dunajom tvorili prevažne suché lúčne oblasti - pasienky
+s veľkým množstvom štrkopieskov nasiaknutých podzemnou vodou ale aj nádherné lužné
+lesy a ramená.
+<br><br>
+Faktory ako blízkosť k Bratislave a jej výstavba, mohutná rieka Dunaj, veľké množstvo
+štrkopieskov, podzemná voda a hodnotná príroda máli potom vplyv na to ako táto oblasť
+vyzerá dnes.
+<br><br>
+Dopyt po štrkopieskoch
+<br><br>
+V 60. tych rokoch bol štrkopiesok lukeatívny materiál veľmi potrebný pre rozvoj Bratislavy. V
+oblasti Čunovských jazier ho bolo naplaveného hojne a tak sa tu vtedy
+začal ťažit. Postupne v 70. rokoch tu takto vznikli dve bagroviská s čistou vodou, ktoré sa
+začali obyvatelia využivať na kúpanie sa. V tomto období sa začína o novovzniknutých
+jazerách uvažovať aj ako o rekreačnom potenciali pre obyvateľov vznikajúcej Petržalky.
+<br><br>
+Dopyt po pitnej vode
+<br><br>
+Nová rozrastajúca sa štvrť však potrebovala nielen rekreačné oblasti, ale hlavne pitnú vodu,
+ktorej (aj vďaka znečisťovaniu a eko-haváriám) bolo v Bratislave nedostatok. A tak sa v
+prírodných oblastiach priebežne robili prieskumy a hľadal sa nový zdroj pitnej vody. Zistilo
+sa, že severne od Čunovských jazier v oblasti Ostrovných lúčok, je dostatok kvalitnej
+podzemnej vody a tak sa tu začalbbudovať nový výdatný vodný zdroj.
+<br><br>
+Pre Bratislavu, ktorá trpela nedostatkom pitnej vody to bol veľký zázrak. Tento novovzniknutý
+zdroj sa však musel chrániť a tak inštitúcie nariadili ochranné pásma, ktoré siahali až k
+čunovským a rusovským jazerám. Vznikla obava, že znečisťovanie týchto jazier môže
+znečistiť aj podzemnú vodu, ktorá v tom čase prúdila od Dunaja cez jazerá smerom k
+vodnému zdroju. A tu nastal obrovský problém. Akýsi konflikt, ktorý pretrváva na jazerách až
+do dnes. Uspokojenie rekreačných túžob obyvateľov versus ochrana prírody a vody.
+<br><br>
+dopyt po vode pre oddych
+<br><br>
+Rastúce obyvateľstvo Bratislavy potrebovalo samozrejme okrem pitnej vody aj relax v
+prírode a v letných horúčavách najmä oddych pri vode. Bratislava ponúkala riečne pláže,
+kúpaliská ale aj niekoľko štrkovísk. Pre ľudí ktorí chceli mať pri oddychu súkromie boli
+najlepšia voľba práve novovzniknuté štrkoviská. Okrem dostatku súkromia ponúkali aj
+priezračnú vodu so samočistiacou schopnosťou. A tak ľudia začali postupne objavovať aj
+odľahlé vtedy málo známe Čunovské jazerá a ich okolitú prírodu. Táto odľahlosť lákala
+samozrejme aj nudistov. Jediný problém bol, že sa tu nenachádzal žiaden bufet a tak si sem
+ľudia museli svoj konzuum nosiť. Nenachádzali sa tu ani sociálne zariadenia, upratovacia
+služba a ani odpadkové koše. Nikto nekontroloval vstup a tak si sem niektorí obyvatelia
+prichádzali umývať a opravovať aj svoje motorové vozidlá. S pribúdajúcimi dovolenkármi,
+začal pribúdať samozrejme aj odpad a znečistenie. A tak inštitúcie(vtedy socialistické) sa
+začali obávať znečistenia novovznikajúceho vodného zdroja. Začala sa ochrana širokej
+oblasti vodného zdroja Ostrovné lúčky a snaha zamedziť prístup na jazerá kúpania chtivým
+obyvateľom. Vtedajšiemu JRD Dunaj - vlastníkovi - bolo dokonca nariadené aby tu
+vybudoval ochranný plot.
+<br><br>
+Nastal konflikt, polícia (vtedy ešte VB) vyháňala ľudí z jazier, ale niektorí sa sem vždy vracali
+a brali to ako obmedzovanie ich slobody, ich právo na oddych pri vode, protest proti
+vtedajšiemu režimu. Boj medzi inštitúciami snažiacimi sa chrániť vodu a ľuďmi dožadujúcimi
+sa svojich práv oddychu po práci. Svoju úlohu tu zohrala aj nedôvera v socialistické inštitúcie
+a pochybnosti, že by zopár kúpajúcich dovolenkárov mohlo nejako znečistiť vodný zdroj.
+Koncom 70tych rokov sa tu budovala panelovo-asfaltová cesta aj s parkoviskom, pre prístup
+k vodnému zdroju. Vyzerá to tak, že panely z jej výstavby, ktoré už nepotrebovali nahádzali
+do jazera a môžeme ich tam vidieť dodnes. Tento odpad sa pridal k stavebnému odpadu,
+ktorý tam ostal ešte z čias ťažby štrku.
+<br><br>
+dopyt po ochrane prírody
+<br><br>
+Ako čas plynul, začali sa črtať ďalší problém pre rekreáciu. Keď sa príroda ako tak zotavila z
+ťažkých mechanizmov a ťažbe štrku, zistilo sa, že lúky v oblasti skrývajú poklady v podobe
+vzácych orchideí. Tieto celosvetovo patrili medzi najviac ohrozené druhy. Tieto druhy sa tu
+zachovali aj preto že územie bolo chránené ochranným pásmom vodného zdroja a to že tu
+platil zákaz akejkoľvek výstavby, znečisťovania alebo hnojenia.
+Letná rekreácia na jazere však mala neblahý vplyv na chránené lúčne porasty. Aby sa
+zamedzilo ničeniu fauny a flóry bola tu v 1988 tam zriadená PR Ostrovné lúčky s 5. neskôr
+4. stupňom ochrany.
+<br><br>
+dopyt po elektrickej energii
+<br><br>
+Ďalší faktor ktorý ovplyvnil Čunovské jazerá bolo vybudovanie vodného diela Gabčíkovo. V
+tom čase ekonomika Českoslivenska na svoj rozvoj potrebovala stále viac elektrickej
+energie a tú malo zabezpečiť aj vodné dielo na Dunaji. Okrem toho malo chrániť územie aj
+pred povodňami. Výstavba tohoto diela sa poriadne zahryzla do okolitých lužných lesov. Pri
+Dunaji vznikalo jedno obrovské stavenisko. Okrem samotnej hrušovskej zdrže sa tu stavala
+hrádza, cesta a odvodňovací kanál. Novopostavená cesta potom umožnila ľahšiu
+dostupnosť jazier.
+<br><br>
+Vodné dielo však prinieslo zmenu pohľadu na ochranu vody. Jeho napustením sa tok
+podzemnej vody otočil. Voda jazier prestala ovplyvňovať vodný zdroj. Navyše podzemná
+voda stúpla. Strach zo znečistenia dôležitého vodného zdroja pominul, ale na povrch
+vyplával nový problém, vlastne to bol ten už spomínaný.
+<br><br>
+dopyt po čistom prostredí
+<br><br>
+Obrovská návštevnosť v letných mesiacoch spôsobovala ničenie a znečisťovanie chránenej
+prírody. Chvíľkové povolenie kúpania sa na veľkom jazere a možnosť parkovania
+motorovými vozidlami malo za následok masívne znečisťovanie jazier, vytváranie skládok a
+ničenie vzácnych rastlín na okolitých lúkach. Pád socializmu a rast ekonomiky - sloboda a
+nárast konzumu, plastových obalov a pohŕdanie zákonom - prírodou mal za následok to, že
+sa z jazier stalo smetisko. Akási skládka odpadu, ktorú jedna menšina tvorila, iná tolerovala
+a ďalšia s ňou bojovala.
+<br><br>
+Najmä po lete vyzerali Čunovské jazerá ako jedna veľká skládka odpadu, ktorú sa snažili
+niektorí zodpovední občania, rybári a samospráva minimalizovať. Boj pomocou polície,
+pokút, zamedzovania vstupu, brán, plotov a rámp. Dobrovoľnícke združenia, rybári a
+samospráva sa snažili aspoň čiastočne odnášať tvoriaci sa odpad na jazerách každoročnými
+brigádami, avšak nič nepomáhalo. Znečisťovanie Čunovských jazier bola častá téma v
+periodikách, hlavne v letnej sezóne. Vyzeralo to na nekonečný boj so znečisťovaním a
+odpadu bolo toľko, že sa nedal ani úplne celý vyzbierať. Veľa odpadu navyše bolo vo vode, v
+zemi, v ťažko dostupných kríkoch a brehoch.
+<br><br>
+vďaka za jazerá a prírodu
+<br><br>
+Keď som pred niekoľkými rokmi začal zbierať odpadky na Čunovských jazerách, boli všade
+a nevedel som kde skôr začať. Z mojej strany to bolo niečo ako úcta a poďakovanie sa
+jazerám, že tu môžem tráviť voľný čas. A zároveň som sa hanbil za ľudí, ktorí to tu
+znečisťujú a ničia. Začal som odstraňovaním stavieb, akési spevnenia brehov, ktoré nielen
+že vyzerali strašne ale boli plné kadejakého odpadu.
+<br><br>
+Povedal som si, že vždy keď navštívim jazerá, niečo vyzbieram a hlavne z nedostupných
+kríkov a brehov. A tak postupne jazero vyčistím. Na začiatku sa mi do toho vôbec nechcelo.
+Ale postupne ma to začalo baviť a tak som v tom pokračoval. Občas niečo pozbierala aj
+priateľka, ktorá ale nikdy nechcela aby som ju uviedol na sociálnych sieťach(tak to robím
+dodatočne) Počas zberu odpadkov som sa stretol s kadečím a kadekým
 
-Prvý krát prídete na jazerá, je to ako by ste objavili raj v meste, poviete si aké krásne prírodné jazerá.
-Niekomu prejde mysľou - "aký nevyužitý potenciál Bratislavy".
-Jazerá budia dojem nikým nedotknutej, neprebádanej krajiny, bez civilizácie, oázy pokoja, o ktorú sa nik nestará a tak je ponechaná napospas prírody.
-Iba stará asfaltová cesta tiahnúca sa popri jazerách, kazí tento dojem nikým nedotknutej krajiny.
-<br>
-A vy ani len netušíte, že tieto perly na okraji Bratislavy nie sú vôbec nedotknuté a majú za sebou búrlivú históriu.
-<br>
-Prečo bolo(stále je?) znečisťovanie jazier tak citlivá a sledovaná téma pre Bratislavu?
-<br>
-<br><br>
-Ťažba štrku v oblasti Čunovských jazier sa datuje do šesťdesiatych a postupný vznik jazier do sedemdesiatych rokov.
-V tomto období sa začína o novovzniknutých jazerách uvažovať aj ako o rekreačnom potenciali pre rozrastajúcu sa Bratislavu
-a to najmä pre obyvateľov vznikajúcej Petržalky. Nové rozrastajúce sa mesto však potrebovalo nielen rekreačné oblasti, ale hlavne
-pitnú vodu, ktorej (aj vďaka znečisťovaniu a eko-haváriám) malo nedostatok. Častokrát ju mesto muselo pre obyvateľov dopravovať v cisternách.
-A tak sa v prírodných oblastiach priebežne robili prieskumy a hľadal sa nový zdroj pitnej vody. Takéto prieskumy sa robili
-aj severne od Čunovských jazier v oblasti Ostrovných lúčok, kde sa zistilo veľa kvalitnej podzemnej vody. A tak inštitúcie rozhodli:
-začne sa tu budovať nový výdatný vodný zdroj pitnej vody pre Bratislavu.
-<br><br>
-Pre mesto, ktoré trpelo nedostatkom pitnej vody to bol veľký zázrak.
-Tento novovzniknutý zdroj sa však musel chrániť a tak inštitúcie nariadili ochranné pásma, ktoré siahali až k čunovským a rusovským jazerám.
-Vznikla obava, že znečisťovanie týchto jazier môže znečistiť aj podzemnú vodu,
-ktorá v tom čase prúdila od Dunaja cez jazerá smerom k vodnému zdroju.
-A tu nastal obrovský problém. Akýsi konflikt, ktorý pretrváva na jazerách až do dnes.
-Plány uspokojiť rekreačné túžby obyvateľov versus ochrana vôd a prírody.  
-<br><br>
-Rastúce obyvateľstvo Bratislavy potrebovalo samozrejme okrem pitnej vody aj relax v prírode a v letných horúčavách najmä oddych pri vode.
-Bratislava ponúkala riečne pláže, kúpaliská ale aj niekoľko štrkovísk. Pre ľudí ktorí chceli mať pri oddychu súkromie boli
-najlepšia voľba práve novovzniknuté štrkoviská. Okrem dostatku súkromia ponúkali aj priezračnú vodu so samočistiacou schopnosťou.
-A tak ľudia začali postupne objavovať aj odľahlé vtedy málo známe Čunovské jazerá a ich okolitú prírodu.
-Táto odľahlosť lákala samozrejme aj nudistov. Jediný problém bol, že sa tu nenachádzal žiaden bufet a tak si sem ľudia museli svoj konzuum nosiť.
-Nenachádzali sa tu ani sociálne zariadenia, upratovacia služba a ani odpadkové koše. Nikto nekontroloval vstup a tak si sem
-niektorí obyvatelia prichádzali umývať a opravovať aj svoje motorové vozidlá.
-S pribúdajúcimi dovolenkármi, začal pribúdať samozrejme aj odpad a znečistenie.
-A tak inštitúcie(vtedy socialistické) sa začali obávať znečistenia novovznikajúceho vodného zdroja.
-Začala sa ochrana širokej oblasti vodného zdroja Ostrovné lúčky a snaha zamedziť prístup na jazerá kúpania chtivým obyvateľom.
-Vtedajšiemu JRD Dunaj - vlastníkovi - bolo dokonca nariadené aby tu vybudoval ochranný plot.
-<br><br>
-Nastal konflikt, polícia (vtedy ešte VB) vyháňala ľudí z jazier, ale niektorí sa sem vždy vracali a brali to ako obmedzovanie ich slobody,
-ich právo na oddych pri vode, protest proti vtedajšiemu režimu.
-Boj medzi inštitúciami snažiacimi sa chrániť vodu a ľuďmi dožadujúcimi sa svojich práv oddychu po práci.
-Svoju úlohu tu zohrala aj nedôvera v socialistické inštitúcie a pochybnosti, že by zopár kúpajúcich dovolenkárom mohlo nejako znečistiť vodný zdroj.  
-<br><br>
-Ako čas plynul, začal sa črtať ďalší problém. Vlastne bolo ich niekoľko.
-<br><br>
-Prvý bol ten že keď sa príroda ako tak zotavila z ťažkých mechanizmov a ťažby štrku zistilo sa,
-že lesy ale najmä lúky v oblasti skrývajú poklady v podobe vzácnej flóry a fauny.  
-<br><br>
-Druhý problém bol ten, že ekonomika Slovenska na svoj rozvoj potrebovala elektrickú energiu a tú malo zabezpečiť vodné dielo na Dunaji.
-Výstavba tohoto diela sa poriadne zahryzla do okolitých lužných lesov. Pri Dunaji vznikalo jedno obrovské stavenisko.
-Aj jazerá zasiahli ťažké mechanizmy vodného diela, našťastie len okrajovo.
-Koncom 70tych rokov sa tu budovala panelo-asfaltová cesta, ktorú potrebovali pre výstavbu vodného diela.
-Stavebný odpad a panely z jej výstavby, ktoré už nepotrebovali však skončili pohádzané v jazere a môžete ich tam vidieť dodnes.
-Tento odpad sa pridal k stavebnému odpadu, ktorý tam bol možno ešte z čias ťažby štrku.
-Až v 80. rokoch, sa začína tamojšia oblasť regenerovať a príroda spametávať. Hlavnú úlohu v tom zohralo aj ochranné pásmo
-vodného zdroja a to že tu platil zákaz akejkoľvek výstavby. Zistilo sa, že na tunajších lúkach ale rastie vzácna kvetena a koncom 80.
-rokov tu vzniká prírodná rezervácia. 
-<br><br>
-Dôležitú úlohu v zmene pohľadu na ochranu vody zohralo napustenie vodného diela Gabčíkovo, kedy sa tok podzemnej vody otočil.
-Voda jazier prestala ovplyvňovať vodný zdroj. Strach zo znečistenia dôležitého vodného zdroja
-pominul, ale na povrch vyplával nový problém, vlastne to bol ten dávny už spomínaný.
-<br><br>
-Obrovská návštevnosť v letných mesiacoch spôsobovala ničenie a znečisťovanie chránenej prírody.
-Chvíľkové povolenie kúpania sa na veľkom jazere a možnosť parkovania motorovými vozidlami malo za následok masívne znečisťovanie jazier,
-vytváranie skládok a ničenie vzácnych rastlín na okolitých lúkach. Pád socializmu a rast ekonomiky - sloboda a nárast konzumu,
-plastových obalov a pohŕdanie zákonom - prírodou mal za následok to, že sa z jazier stalo smetisko.
-Akási skládka odpadu, ktorú jedna menšina tvorila, iná tolerovala a ďalšia s ňou bojovala.
-<br><br>
-Čunovské jazerá vyzerali ako jedna veľká skládka odpadu, ktorú sa snažili
-niektorí zodpovední občania, rybári a samospráva minimalizovať. Boj pomocou polície, pokút, zamedzovania vstupu, brán, plotov a
-rámp. Dobrovoľnícke združenia, rybári a samospráva sa snažili aspoň čiastočne odnášať tvoriaci sa odpad na jazerách každoročnými brigádami,
- avšak nič nepomáhalo. Znečisťovanie Čunovských jazier bola častá téma v periodikách, hlavne v letnej sezóne.
-Vyzeralo to na nekonečný boj so znečisťovaním a odpadu bolo toľko, že sa nedal ani úplne celý vyzbierať.
-Veľa odpadu navyše bolo vo vode, v zemi, v ťažko dostupných kríkoch a brehoch.
-<br><br>
-Keď som pred niekoľkými rokmi začal zbierať odpadky na Čunovských jazerách, boli všade a nevedel som kde skôr začať.
-Z mojej strany to bolo niečo ako úcta a poďakovanie sa jazerám, že tu môžem tráviť voľný čas. A zároveň
-som sa hanbil za ľudí, ktorí to tu znečisťujú a ničia. Začal som odstraňovaním stavieb, akési spevnenia
-brehov, ktoré nielen že vyzerali strašne ale boli plné kadejakého odpadu.
-<br><br>
-Povedal som si, že vždy keď navštívim jazerá, niečo vyzbieram a hlavne z nedostupných kríkov a brehov. A tak postupne jazero vyčistím.
-Na začiatku sa mi do toho vôbec nechcelo. Ale postupne ma to začalo baviť a tak som v tom pokračoval. Občas niečo pozbierala aj
-priateľka, ktorá ale nikdy nechcela aby som ju uviedol na sociálnych sieťach(tak to robím dodatočne)
-Počas zberu odpadkov som sa stretol s kadečím a kadekým.
 <br><br>
  
 <br>Videl som napr. ako si nudista vešia mikroténové sáčky na zrezané stromy vo vode, asi si myslel že tvorí umelecké dielo, samozrejme svoje dielo tam nechal.
