--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <html>
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHRV5ETT2Z"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-	
-  gtag('config', 'G-JHRV5ETT2Z');
-</script>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta http-equiv="refresh" content="1"; url='https://cunovske-jazera-bez-odpadkov.github.io'" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Čunovské jazerá bez odpadkov</title>
+<title>Čunovské jazerá</title>
 	
 <style>
 <!--
